[package]
name = "exponential-decay-histogram"
version = "0.1.4"
authors = ["Steven Fackler <sfackler@gmail.com>"]
description = "A histogram which exponentially weights in favor of recent values"
license = "MIT/Apache-2.0"
repository = "https://github.com/sfackler/exponential-decay-histogram"
readme = "README.md"
categories = ["data-structures"]
keywords = ["metrics", "statistics"]

[badges]
circle-ci = { repository = "sfackler/exponential-decay-histogram" }

[[bench]]
name = "bench"
harness = false

[dependencies]
ordered-float = "1.0"
rand = "0.6"

[dev-dependencies]
criterion = "0.2"
