[package]
name = "exponential-decay-histogram"
version = "0.1.12"
authors = ["Steven Fackler <sfackler@gmail.com>"]
description = "A histogram which exponentially weights in favor of recent values"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sfackler/exponential-decay-histogram"
readme = "README.md"
categories = ["data-structures"]
keywords = ["metrics", "statistics"]

[badges]
circle-ci = { repository = "sfackler/exponential-decay-histogram" }

[[bench]]
name = "bench"
harness = false

[dependencies]
ordered-float = "5.0"
rand = { version = "0.9", features = ["small_rng"] }

[dev-dependencies]
criterion = "0.5"
